crates/lyra-tests/tests/snapshots/corpus__lrm__7__7.8.1__wildcard_index_type__foreach_illegal.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.foreach_wildcard_assoc] 8:10..8:10: foreach loop cannot iterate over wildcard associative array
---
unit (0 diagnostics)
