crates/lyra-tests/tests/snapshots/corpus__lrm__7__7.8.1__wildcard_index_type__index_key_non_integral.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (2 diagnostics)
  error[lyra.type.index_key_not_integral] 12:16..12:16: index expression must be integral for wildcard associative array
  error[lyra.type.index_key_not_integral] 16:11..16:11: index expression must be integral for wildcard associative array
---
unit (0 diagnostics)
