crates/lyra-tests/tests/snapshots/corpus__lrm__7__7.8.1__wildcard_index_type__method_restriction.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (2 diagnostics)
  error[lyra.type.method_call_error] 12:11..12:11: method `first` cannot be used on wildcard associative arrays
  error[lyra.type.method_call_error] 14:11..14:11: method `last` cannot be used on wildcard associative arrays
---
unit (0 diagnostics)
